Create general page structure

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 </head>
 
 <body>
+    <!-- Header -->
+    <h1>Header</h1>
+    <!-- Main content -->
+    <main>Main Content</main>
+    <!-- Footer -->
+    <footer>Footer</footer>
 
 </body>
 
