--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1 id="logo">Love Running</h1>
       </a>
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-label">X</label>
+      <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
       <nav>
         <ul id="menu">
           <li><a href="" class="active">Home</a></li>
@@ -66,13 +66,40 @@
             ><i class="fa-brands fa-facebook"></i>
           </a>
         </li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>
+          <a
+            href="https://www.twiiter.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Twitter page (opens in new tab)"
+            ><i class="fa-brands fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Youtube page (opens in new tab)"
+            ><i class="fa-brands fa-youtube"></i>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Instagram page (opens in new tab)"
+            ><i class="fa-brands fa-instagram"></i>
+          </a>
+        </li>
       </ul>
     </footer>
 
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/913f841016.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/913f841016.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
